# dbt-auto-defer

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_auto_defer.py  setup.cfg
tests/: conftest.py  test_basic.py  test_git_interaction.py
