[metadata]
name = dbt-auto-defer
author = Alban King
version = 0.0.1
description = Retrieve and use dbt manifest.json files for state defer.
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = dbt_auto_defer
python_requires = >=3.10
install_requires =
    GitPython
    click

[options.extras_require]
dev = pre-commit

[options.entry_points]
console_scripts =
    dbt-auto-defer = dbt_auto_defer:main
